# flamapp_assessment

./: README.md  package-lock.json
app/src/: main.ts
app/src/jni/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/: GLRenderer.kt  NativeBridge.kt
app/src/main/java/com/yourorg/edgeviewer/: CameraController.kt  MainActivity.kt
app/src/web/: index.html
app/src/web/src/: package.json  tsconfig.json
docs/: index.html
